--- a/ovirt-engine.spec.in
+++ b/ovirt-engine.spec.in
@@ -182,7 +182,7 @@ Summary:	KVM Management server
 Group:		%{ovirt_product_group}
 License:	ASL 2.0
 URL:		http://www.ibm.com
-Source0:	http://github.com/phoenixsbk/kvmmgr
+Source0:	http://github.com/phoenixsbk/kvmmgr/@PACKAGE_NAME@-@PACKAGE_VERSION@.tar.gz
 
 BuildArch:	noarch
 
