--- a/frontend/webadmin/modules/webadmin/src/main/webapp/WEB-INF/web.xml
+++ b/frontend/webadmin/modules/webadmin/src/main/webapp/WEB-INF/web.xml
@@ -141,7 +141,7 @@
 
 	<!-- Default page to serve -->
 	<welcome-file-list>
-		<welcome-file>WebAdmin.html</welcome-file>
+		<welcome-file>Login.html</welcome-file>
 	</welcome-file-list>
 
 	<!-- Error page to present -->
