--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -69,6 +69,13 @@
       <version>${engine.version}</version>
       <type>war</type>
     </dependency>
+    
+    <dependency>
+    	<groupId>org.ovirt.engine.ui</groupId>
+    	<artifactId>uiadmin</artifactId>
+    	<version>${engine.version}</version>
+    	<type>war</type>
+    </dependency>
 
     <!-- ** EJB-JARs -->
     <dependency>
@@ -221,6 +228,13 @@
               <groupId>org.ovirt.engine.core</groupId>
               <artifactId>welcome</artifactId>
               <bundleFileName>welcome.war</bundleFileName>
+              <contextRoot>/kvmmgr-engine/welcome</contextRoot>
+            </webModule>
+            
+            <webModule>
+              <groupId>org.ovirt.engine.ui</groupId>
+              <artifactId>uiadmin</artifactId>
+              <bundleFileName>uiadmin.war</bundleFileName>
               <contextRoot>/kvmmgr-engine</contextRoot>
             </webModule>
 
