--- a/ovirt-engine.spec.in
+++ b/ovirt-engine.spec.in
@@ -937,7 +937,7 @@ fi
 %{engine_data}/files/
 %{engine_doc}/AuditLogMessages.properties
 %{engine_doc}/mibs/
-${engine_ear}/uiadmin.war/
+%{engine_ear}/uiadmin.war/
 %{engine_ear}/META-INF
 %{engine_ear}/bll.jar
 %{engine_ear}/docs.war/
