--- a/frontend/webadmin/modules/uiadmin/pom.xml
+++ b/frontend/webadmin/modules/uiadmin/pom.xml
@@ -1,10 +1,20 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.ovirt.engine.ui</groupId>
-    <artifactId>webadmin-modules</artifactId>
-    <version>1.0.0</version>
-  </parent>
-  <artifactId>uiadmin</artifactId>
-  <packaging>war</packaging>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.ovirt.engine.ui</groupId>
+		<artifactId>webadmin-modules</artifactId>
+		<version>1.0.0</version>
+	</parent>
+	<artifactId>uiadmin</artifactId>
+	<packaging>war</packaging>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.ovirt.engine</groupId>
+				<artifactId>jboss-modules-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
